integration des interfaces